파일 구조를 다시 알게 됨 이미지를 호출하기 위해서는 public 폴더를 만들어줘야함 lib폴더 만들어줌 public에는 router.js 파일이 들어갈 수 없음

--- a/Client/template/login.html
+++ b/Client/template/login.html
@@ -3,7 +3,7 @@
         <form class="col s12">
             <div class ="row">
                 <div class="col s12 m6 offset-m3 mobile-login-img">
-                    <img src ="mainlogo.png" width="500" height="500">
+                    <img src ="/images/mainlogo.png">
                 </div>
             </div>
             <div class="row">
@@ -26,9 +26,9 @@
                 </div>
             </div>
             <div class="row">
-                    <div class="row mobile-login-notid col s12 m3 offset-m4">
-                      <a class="mobile-login-signup" href="">회원이 아니신가요?</a>
-                    </div>
+                <div class="row mobile-login-notid col s12 m3 offset-m4">
+                     <a class="mobile-login-signup" href="">회원이 아니신가요?</a>
+                </div>
             </div>
         </form>
       </div>
