메인로그인페이지 만듬

--- a/Client/template/login.html
+++ b/Client/template/login.html
@@ -2,8 +2,8 @@
       <div class="row">
         <form class="col s12">
             <div class ="row">
-                <div class="col s12 m6 offset-m3 mobile-login-img">
-                    <img src ="/images/mainlogo.png">
+                <div class="col s12 m6 offset-m2 mobile-login-img">
+                    <img src ="/images/mainlogo.png" style ="80%" align="middle">
                 </div>
             </div>
             <div class="row">
@@ -21,12 +21,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12 m3 offset-m4">
-                    <a class="waves-effect waves-light btn">Log in</a>
+                <div class="input-field3 col s12 m3 offset-m5">
+                    <a class="waves-effect waves-light btn-large">Log in</a>
                 </div>
             </div>
             <div class="row">
-                <div class="row mobile-login-notid col s12 m3 offset-m4">
+                <div class="row mobile-login-notid col s12 m3 offset-m5">
                      <a class="mobile-login-signup" href="">회원이 아니신가요?</a>
                 </div>
             </div>
