--- a/Client/template/signin.html
+++ b/Client/template/signin.html
@@ -1,3 +1,48 @@
 <template name="signin">
-
+    <div class="row">
+        <nav>
+          <div class="nav-wrapper">
+            <a class="brand-logo">회원가입</a>
+          </div>
+        </nav>
+        <form class="col s12">
+          <div class="row">
+            <div class="sign-input-field col s12">
+              <input id="submit-email" type="email" class="validate">
+              <label for="submit-email">이메일</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="sign-input-field s12">
+              <input id="submit-password" type="password" class="validate">
+              <label for="submit-password">비밀번호</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="sign-input-field col s12">
+              <input id="submit-passwordconfirm" type="password" class="validate">
+              <label for="submit-passwordconfirm">비밀번호 확인</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="sign-input-field col s6">
+              <input id="submit-usrname" type="text" class="validate">
+              <label for="submit-usrname">성명</label>
+            </div>
+            <div class="sign-input-field col s6">
+              <input id="submit-nickname" type="text" class="validate">
+              <label for="submit-nickname">닉네임</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="file-field input-field col s6">
+              <div id="signup-image-wrap" class="btn waves-effect waves-light red lighten-1">
+                <span>프로필 이미지</span>
+                <input id="signup-image" type="file">
+              </div>
+            </div>
+          </div>
+        </form>
+        <a id="submit" class="waves-effect waves-light btn" style="float: right; margin-right: 10px;">확인</a>
+      </div>
 </template>
