메인 페이지 만듬

--- a/Client/template/main.html
+++ b/Client/template/main.html
@@ -1,3 +1,16 @@
 <template name ="main">
-    
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo right">가입자</a>
+        <ul id="nav-mobile" class="left">
+          <li><a href="">글쓰기</a></li>
+          <li><a href="">강의신청</a></li>
+          <li><a href="">강의등록</a></li>
+          <li><a href="">수강목록</a></li>
+          <li><a href="">강의목록</a></li>
+          <li><a href="">자유게시판</a></li>
+          <li><a href="">환경설정</a></li>
+        </ul>
+      </div>
+    </nav>
 </template>
