--- a/Client/template/signin.html
+++ b/Client/template/signin.html
@@ -35,14 +35,27 @@
             </div>
           </div>
           <div class="row">
+              <div class="sign-input-field col s3">
+                  <p>
+                      <input name="submit-job" type="radio" id="pro"/>
+                      <label for="pro">교수</label>
+                  </p>
+              </div>
+              <div class="sign-input-field col s3">
+                  <p>
+                      <input name="submit-job" type="radio" id="stu"/>
+                      <label for="stu">학생</label>
+                  </p>
+              </div>
+          </div>
+          <div class="row">
             <div class="file-field input-field col s6">
               <div id="signup-image-wrap" class="btn waves-effect waves-light red lighten-1">
                 <span>프로필 이미지</span>
-                <input id="signup-image" type="file">
               </div>
             </div>
           </div>
         </form>
         <a id="submit" class="waves-effect waves-light btn" style="float: right; margin-right: 10px;">확인</a>
-      </div>
+    </div>
 </template>
