--- a/Client/template/write.html
+++ b/Client/template/write.html
@@ -24,9 +24,7 @@
     </div>
     <div class="row">
         <div class="wrapper">
-        <button class="btn waves-effect waves-light" type="submit" name="action">보내기
-            <i class="material-icons right"></i>
-        </button>
+            <button class="btn waves-effect waves-light" type="submit" name="action">보내기</button>
         </div>
     </div>
 </template>
