로그아웃 가

--- a/Client/template/main.html
+++ b/Client/template/main.html
@@ -1,7 +1,7 @@
 <template name ="main">
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">회원정보</a></li>
-        <li><a href="#!">로그아웃</a></li>
+        <li><a href="#">회원정보</a></li>
+        <li><a href="#" class = "logout">로그아웃</a></li>
     </ul>
     <nav>
       <div class="nav-wrapper">
