--- a/Client/template/login.html
+++ b/Client/template/login.html
@@ -9,8 +9,8 @@
             <div class="row">
                 <div class="input-field col s12 m3 offset-m4">
                   <i class="material-icons prefix">account_circle</i>
-                  <input id="icon_prefix" type="text" class="validate">
-                  <label for="icon_prefix">ID</label>
+                  <input id="icon_email" type="text" class="validate">
+                  <label for="icon_email">ID</label>
                 </div>
             </div>
             <div class="row">
@@ -22,12 +22,12 @@
             </div>
             <div class="row">
                 <div class="input-field3 col s12 m3 offset-m5">
-                    <a class="waves-effect waves-light btn-large">Log in</a>
+                    <a id="login" class="waves-effect waves-light btn-large">로그인</a>
                 </div>
             </div>
             <div class="row">
                 <div class="row mobile-login-notid col s12 m3 offset-m5">
-                     <a class="mobile-login-signup" href="">회원이 아니신가요?</a>
+                     <a class="mobile-login-signup" href="{{pathFor route='signin'}}">회원이 아니신가요?</a>
                 </div>
             </div>
         </form>
