--- a/Client/template/write.html
+++ b/Client/template/write.html
@@ -3,11 +3,21 @@
         <div class="nav-wrapper">
           <a href="#" class="brand-logo center">글쓰기</a>
         </div>
-     </nav>
-
-     <div class ="row"></div>
+    </nav>
+    <div class="row"></div>
      <div class="row">
          <form class="col s12">
+             <div class="row">
+                 <div class="input-field col s8 offset-s2">
+                     <select>
+                         <option value="" disabled selected>강좌를 선택하세요</option>
+                         <option value="1">Option 1</option>
+                         <option value="2">Option 2</option>
+                         <option value="3">Option 3</option>
+                     </select>
+                     <label>강좌명</label>
+                 </div>
+             </div>
              <div class="row">
                  <div class="input-field col s8 offset-s2">
                      <input id="input_text" type="text" length="10">
