자유 게시판 만드는 중

--- a/Client/template/main.html
+++ b/Client/template/main.html
@@ -14,8 +14,7 @@
           <li><a href="">강의등록</a></li>
           <li><a href="">수강목록</a></li>
           <li><a href="">강의목록</a></li>
-          <li><a href="">자유게시판</a></li>
-          <li><a href="">환경설정</a></li>
+          <li><a href="{{pathFor route='freepost'}}">자유게시판</a></li>
         </ul>
       </div>
     </nav>
