collection Posts 만듬 postItem 게시글폼 이미지 만듬 freepost form reform

--- a/Client/template/freepost.html
+++ b/Client/template/freepost.html
@@ -6,8 +6,6 @@
     </nav>
     <div class="row"></div>
     <div class="row">
-        <a href="#!" class="waves-effect waves-circle waves-light btn-floating secondary-content">
-            <i class="material-icons">add</i>
-        </a>
+        <a href="{{pathFor route='write'}}" class="btn-floating btn-large waves-effect waves-light red right"><i class="material-icons">mode_edit</i></a>
     </div>
 </template>
