--- a/Client/template/write.html
+++ b/Client/template/write.html
@@ -9,19 +9,13 @@
          <form class="col s12">
              <div class="row">
                  <div class="input-field col s8 offset-s2">
-                     <select>
-                         <option value="" disabled selected>강좌를 선택하세요</option>
-                         <option value="1">Option 1</option>
+                     <select id ="Classification">
+                         <option value="" disabled selected>목록을 선택해주세요</option>
+                         <option value="1">자유게시판</option>
                          <option value="2">Option 2</option>
                          <option value="3">Option 3</option>
                      </select>
-                     <label>강좌명</label>
-                 </div>
-             </div>
-             <div class="row">
-                 <div class="input-field col s8 offset-s2">
-                     <input id="input_text" type="text" length="10">
-                     <label for="input_text">제목</label>
+                     <label>분류</label>
                  </div>
              </div>
              <div class="row">
@@ -34,7 +28,7 @@
     </div>
     <div class="row">
         <div class="wrapper">
-            <button class="btn waves-effect waves-light" type="submit" name="action">보내기</button>
+            <button class="btn waves-effect waves-light" type="submit" id="submit">보내기</button>
         </div>
     </div>
 </template>
