자유게시판 등록 완성 글쓰기 제목 지움 디비 연동 확

--- a/Client/template/freepost.html
+++ b/Client/template/freepost.html
@@ -5,6 +5,11 @@
         </div>
     </nav>
     <div class="row"></div>
+    <div class="row s12">
+        {{#each posts}}
+            {{> postItem}}
+        {{/each}}
+    </div>
     <div class="row">
         <a href="{{pathFor route='write'}}" class="btn-floating btn-large waves-effect waves-light red right"><i class="material-icons">mode_edit</i></a>
     </div>
