로그인 하지 않으면 글쓰기 창 이용금지및 자유게시판만 볼수 있도록 설정 meteor.call함수 호출시 Meteor.methods check 함수가 정의 되지 않다고 해서 meteor add ejson 을 추가 시켜 줬음 경고창페이지 추가 router에서 랜더링 할시 include ->deined.html 로 이동함

--- a/Client/template/postItem.html
+++ b/Client/template/postItem.html
@@ -3,7 +3,8 @@
         <div class="card-panel grey lighten-2 col s7 offset-s3">
             <span class="blue-text text-darken-2">{{postuser}}</span><br>
             <span class="blue-text text-darken-2"><h3>{{content}}</h3></span><br>
-            <span class="blue-text text-darken-2">댓글</span>
+            {{#if currentUser}}<span class="blue-text text-darken-2">댓글</span>{{/if}}
+            {{#if myPost}}<span class="blue-text text-darken-2">수정</span>{{/if}}
         </div>
     </div>
 </template>
