--- a/Client/template/postItem.html
+++ b/Client/template/postItem.html
@@ -1,7 +1,8 @@
 <template name = "postItem">
     <div class="row">
         <div class="card-panel grey lighten-2 col s7 offset-s3">
-            <span class="blue-text text-darken-2">{{postuser}}</span><br>
+            <span class="blue-text text-darken-2">{{postuser}}</span>
+            {{#if myPost}}<i class="small material-icons right"><p id="postdel">delete</p></i>{{/if}}<br>
             <span class="blue-text text-darken-2"><h3>{{content}}</h3></span><br>
             {{#if currentUser}}<span class="blue-text text-darken-2">댓글</span>{{/if}}
             {{#if myPost}}<span class="blue-text text-darken-2">수정</span>{{/if}}
