--- a/Client/template/write.html
+++ b/Client/template/write.html
@@ -11,7 +11,7 @@
                  <div class="input-field col s8 offset-s2">
                      <select id ="Classification">
                          <option value="" disabled selected>목록을 선택해주세요</option>
-                         <option value="1">자유게시판</option>
+                         <option value="1">자유대화함</option>
                          <option value="2">Option 2</option>
                          <option value="3">Option 3</option>
                      </select>
