--- a/Client/template/main.html
+++ b/Client/template/main.html
@@ -14,7 +14,7 @@
           <li><a href="">강의등록</a></li>
           <li><a href="">수강목록</a></li>
           <li><a href="">강의목록</a></li>
-          <li><a href="{{pathFor route='freepost'}}">자유게시판</a></li>
+          <li><a href="{{pathFor route='freepost'}}">자유대화함</a></li>
         </ul>
       </div>
     </nav>
