--- a/Client/template/postItem.html
+++ b/Client/template/postItem.html
@@ -3,11 +3,29 @@
         <div class="col s7 offset-s3">
             {{#if myPost}}<i class="small material-icons right"><p id="postdel">delete</p></i>{{/if}}<br>
             <span class="blue-text text-darken-2"><h3>{{content}}</h3></span><br>
-            <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>
-            &nbsp;&nbsp;&nbsp;<i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>
-            &nbsp;&nbsp;&nbsp;<i class="material-icons">comment</i>{{#if currentUser}}<span class="blue-text text-darken-2">댓글</span>{{/if}}
-            &nbsp;&nbsp;&nbsp;{{#if myPost}}<span class="blue-text text-darken-2"><a href="{{pathFor route='postEdit'}}">수정</a></span>{{/if}}
+            <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>&nbsp;&nbsp;&nbsp;
+            <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>&nbsp;&nbsp;&nbsp;
+            <i class="material-icons"><a href="{{pathFor route='postComment'}}">comment</a></i>{{#if currentUser}}{{/if}}&nbsp;&nbsp;&nbsp;
+            {{#if myPost}}<span class="blue-text text-darken-2"><a class="modal-trigger" href="#modal1">수정</a></span>{{/if}}
             <hr class="two">
+            <div id="modal1" class="modal modal-fixed-footer">
+                <nav>
+                    <div class="nav-wrapper">
+                      <a class="brand-logo center">수정하기</a>
+                    </div>
+                </nav>
+              <div class="modal-content">
+                  <center><h4>내용을 수정해주세요.</h4></center>
+                   <div class="input-field col s8 offset-s2">
+                       <textarea id="textarea1" value={{content}} class="materialize-textarea" length="120"></textarea>
+                       <label for="textarea1">내용</label>
+                   </div>
+              </div>
+              <div class="modal-footer">
+                <a id="postedit" class="modal-action modal-close waves-effect waves-green btn-flat">확인</a>
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">취소</a>
+              </div>
+            </div>
         </div>
     </div>
 </template>
