수정 태그 수정 완료 하거나 취소시 모달 해제 안됬던 부분 해결함

--- a/Client/template/postItem.html
+++ b/Client/template/postItem.html
@@ -23,7 +23,7 @@
               </div>
               <div class="modal-footer">
                 <a id="postedit" class="modal-action modal-close waves-effect waves-green btn-flat">확인</a>
-                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">취소</a>
+                <a class="modal-action modal-close waves-effect waves-green btn-flat">취소</a>
               </div>
             </div>
         </div>
