lecture DB생성 강의신청, 강의등록 완료 강의 목록 개발중

--- a/Client/template/main.html
+++ b/Client/template/main.html
@@ -10,10 +10,10 @@
         </ul>
         <ul id="nav-mobile" class="left">
           <li><a href="{{pathFor route='write'}}">글쓰기</a></li>
-          <li><a href="">강의신청</a></li>
-          <li><a href="">강의등록</a></li>
+          <li><a href="{{pathFor route='lecturelist'}}">강의신청</a></li>
+          <li><a href="{{pathFor route='lecturesignin'}}">강의등록</a></li>
           <li><a href="">수강목록</a></li>
-          <li><a href="">강의목록</a></li>
+          <li><a href="{{pathFor route='mylectures'}}">강의목록</a></li>
           <li><a href="{{pathFor route='freepost'}}">자유대화함</a></li>
         </ul>
       </div>
