메타 태그 추가로 모바일 디바이스 사이즈마다 모바일 화면에 맞게 나옴. 메인 페이지 및 로그인 페이지 수정

--- a/client/template/mobile/signin.html
+++ b/client/template/mobile/signin.html
@@ -2,24 +2,26 @@
     <div class="row">
         <nav>
           <div class="nav-wrapper">
-            <a class="brand-logo">회원가입</a>
+            <div class ="col s12">
+                <center><a class="brand-logo">회원가입</a></center>
+            </div>
           </div>
         </nav>
         <form class="col s12">
           <div class="row">
-            <div class="sign-input-field col s12">
+            <div class="sign-input-field col s6 offset-s3">
               <input id="submit-email" type="email" class="validate">
               <label for="submit-email">이메일</label>
             </div>
           </div>
           <div class="row">
-            <div class="sign-input-field s12">
+            <div class="sign-input-field col s6 offset-s3">
               <input id="submit-password" type="password" class="validate">
               <label for="submit-password">비밀번호</label>
             </div>
           </div>
           <div class="row">
-            <div class="sign-input-field col s12">
+            <div class="sign-input-field col s6 offset-s3">
               <input id="submit-passwordconfirm" type="password" class="validate">
               <label for="submit-passwordconfirm">비밀번호 확인</label>
             </div>
@@ -35,13 +37,13 @@
             </div>
           </div>
           <div class="row">
-              <div class="sign-input-field col s3">
+              <div class="sign-input-field col s6">
                   <p>
                       <input name="submit-job" type="radio" id="pro"/>
                       <label for="pro">교수</label>
                   </p>
               </div>
-              <div class="sign-input-field col s3">
+              <div class="sign-input-field col s6">
                   <p>
                       <input name="submit-job" type="radio" id="stu"/>
                       <label for="stu">학생</label>
@@ -50,7 +52,7 @@
           </div>
           <div class="row">
             <div class="file-field input-field col s6">
-              <div id="signup-image-wrap" class="btn waves-effect waves-light red lighten-1">
+              <div id="signup-image-wrap" class="btn-large waves-effect waves-light red lighten-1">
                 <span>프로필 이미지</span>
               </div>
             </div>
