--- a/client/template/mobile/postComment.html
+++ b/client/template/mobile/postComment.html
@@ -6,11 +6,11 @@
     </nav>
     <div class="row"></div>
     <div class="row">
-        <div class ="col s7 offset-s3">
-            <span class="blue-text text-darken-2"><h3>{{content}}</h3></span><br>
-            <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>&nbsp;&nbsp;&nbsp;
-            <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>&nbsp;&nbsp;&nbsp;
-            <i class="material-icons"><a href="{{pathFor route='postComment'}}">comment</a></i>{{commentsCount}}&nbsp;&nbsp;&nbsp;
+        <div class ="col 10 offset-s1">
+            <span class="blue-text text-darken-2"><h5>{{content}}</h5></span><br>
+            <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>
+            <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>
+            <i class="material-icons"><a href="{{pathFor route='postComment'}}">comment</a></i>{{commentsCount}}
             <hr class="two">
         </div>
     </div>
