--- a/Client/css/login.css
+++ b/Client/css/login.css
@@ -1,5 +1,7 @@
 div.mobile-login-img{
-    margin-top:30%;
+    margin-top:35%;
+    margin-bottom:15%;
+    margin-right:2%;
 }
 div.input-field3{
     margin-top:5%
