--- a/client/template/mobile/main.html
+++ b/client/template/mobile/main.html
@@ -9,15 +9,19 @@
           <li><a href="{{pathFor route='lecturesignin'}}">강의등록</a></li>
           <li><a href="">수강목록</a></li>
           <li><a href="{{pathFor route='mylectures'}}">강의목록</a></li>
+          <li><a href="{{pathFor route='freepost'}}">자유대화함</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo" style="transform:translateX(0px);">
             <li><img src="/images/minilogo.png"></li>
-            <li><a href="{{pathFor route='write'}}"><h5>글쓰기</h5></a></li>
-            <li><a href="{{pathFor route='lecturelist'}}"><h5>강의신청</h5></a></li>
-            <li><a href="{{pathFor route='lecturesignin'}}"><h5>강의등록</h5></a></li>
-            <li><a href=""><h5>수강목록</h5></a></li>
-            <li><a href="{{pathFor route='mylectures'}}"><h5>강의목록</h5></a></li>
-            <li><a class="btn waves-effect waves-light" id="logout"><h5>로그아웃</h5></a></li>
+            <li><center><a><h3>{{cuser}}</h3></a></center></li>
+            <li><a href="{{pathFor route='write'}}">글쓰기</a></li>
+            <li><a href="{{pathFor route='lecturelist'}}">강의신청</a></li>
+            <li><a href="{{pathFor route='lecturesignin'}}">강의등록</a></li>
+            <li><a href="">수강목록</a></li>
+            <li><a href="{{pathFor route='mylectures'}}">강의목록</a></li>
+            <li><a href="{{pathFor route='freepost'}}">자유대화함</a></li>
+            <li><a>내정보</a></li>
+            <li><a class="btn waves-effect waves-light" id="logout">로그아웃</a></li>
         </ul>
       </div>
     </nav>
