--- a/client/template/mobile/postItem.html
+++ b/client/template/mobile/postItem.html
@@ -1,11 +1,11 @@
 <template name = "postItem">
     <div class="row">
-        <div class="col s7 offset-s3">
+        <div class="col s12">
             {{#if myPost}}<i class="small material-icons right"><p id="postdel">delete</p></i>{{/if}}<br>
-            <span class="blue-text text-darken-2"><h3>{{content}}</h3></span><br>
-            <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>&nbsp;&nbsp;&nbsp;
-            <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>&nbsp;&nbsp;&nbsp;
-            <i class="material-icons"><a href="{{pathFor route='postComment'}}">comment</a></i>{{commentsCount}}&nbsp;&nbsp;&nbsp;
+            <span class="blue-text text-darken-2"><h5>{{content}}</h5></span><br>
+            <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>
+            <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>
+            <i class="material-icons"><a href="{{pathFor route='postComment'}}">comment</a></i>{{commentsCount}}
             {{#if myPost}}<span class="blue-text text-darken-2"><a class="modal-trigger" href="#modal1">수정</a></span>{{/if}}
             <hr class="two">
             <div id="modal1" class="modal modal-fixed-footer">
@@ -15,15 +15,15 @@
                     </div>
                 </nav>
               <div class="modal-content">
-                  <center><h4>내용을 수정해주세요.</h4></center>
-                   <div class="input-field col s8 offset-s2">
+                  <center><h5>내용을 수정해주세요.</h5></center>
+                   <div class="input-field col s12">
                        <textarea id="textarea1" value={{content}} class="materialize-textarea" length="120"></textarea>
                        <label for="textarea1">내용</label>
                    </div>
               </div>
               <div class="modal-footer">
-                <a id="postedit" class="modal-action modal-close waves-effect waves-green btn-flat">확인</a>
-                <a class="modal-action modal-close waves-effect waves-green btn-flat">취소</a>
+                <a class="modal-action modal-close waves-effect waves-green btn-flat">확인</a>
+                <a id="postexit" class="modal-action modal-close waves-effect waves-green btn-flat">취소</a>
               </div>
             </div>
         </div>
