--- a/client/template/mobile/submitComment.html
+++ b/client/template/mobile/submitComment.html
@@ -1,5 +1,5 @@
 <template name="submitComment">
-    <div class="col s8 offset-s3">
+    <div class="col s12">
         <div class="col s8 offset">
             <div class="input-field">
                 <i class="material-icons prefix">mode_edit</i>
