학생 수강목록 기능 완성 &in 사용하면 학생 lectures에 배열각각 인자 값을 접근 할 수 있다.

--- a/client/template/mobile/mylectures.html
+++ b/client/template/mobile/mylectures.html
@@ -37,7 +37,9 @@
                 </tr>
             </thead>
             <tbody>
-
+                {{#each mylectures}}
+                    {{>lectureform}}
+                {{/each}}
             </tbody>
         </table>
     </div>
