학생 수강 신청 및 수강 취소 할 수 있도록 구현함

--- a/client/template/mobile/lectureform.html
+++ b/client/template/mobile/lectureform.html
@@ -12,6 +12,14 @@
         {{/if}}
     </tr>
 </template>
+<template name ="stlectureform">
+    <tr>
+        <td>{{name}}</td>
+        <td>{{professor}}</td>
+        <td>{{major}}</td>
+        <td><a id = "stlecture-del" class="waves-effect pink lighten-1 btn">삭제</a></td>
+    </tr>
+</template>
 <template name ="mylectureform">
     <tr>
         <td>{{name}}</td>
