--- a/client/template/mobile/mylectures.html
+++ b/client/template/mobile/mylectures.html
@@ -32,13 +32,14 @@
             <thead>
                 <tr>
                     <th data-field="id">과목명</th>
+                    <th data-field="proname">교수명</th>
                     <th data-field="name">전공분류</th>
                     <th data-field="price">수강취소</th>
                 </tr>
             </thead>
             <tbody>
                 {{#each mylectures}}
-                    {{>lectureform}}
+                    {{> stlectureform}}
                 {{/each}}
             </tbody>
         </table>
