--- a/client/template/mobile/postItem.html
+++ b/client/template/mobile/postItem.html
@@ -3,6 +3,7 @@
         <div class="col s12">
             {{#if myPost}}<i class="small material-icons right"><p id="postdel">delete</p></i>{{/if}}<br>
             <span class="blue-text text-darken-2"><h5>{{content}}</h5></span><br>
+            {{#if judgePart}}<span class="blue-text text-darken-2">{{lectitle}}</span>{{/if}}
             <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>
             <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>
             <i class="material-icons"><a href="{{pathFor route='postComment'}}">comment</a></i>{{commentsCount}}
