자유게시판 수정태그 고침

--- a/client/template/mobile/postItem.html
+++ b/client/template/mobile/postItem.html
@@ -23,7 +23,7 @@
                    </div>
               </div>
               <div class="modal-footer">
-                <a class="modal-action modal-close waves-effect waves-green btn-flat">확인</a>
+                <a id="postedit" class="modal-action modal-close waves-effect waves-green btn-flat">확인</a>
                 <a id="postexit" class="modal-action modal-close waves-effect waves-green btn-flat">취소</a>
               </div>
             </div>
