--- a/client/template/mobile/main.html
+++ b/client/template/mobile/main.html
@@ -10,6 +10,7 @@
           {{#if Isstudent}}<li><a href="{{pathFor route = 'studentlectures'}}">수강목록</a></li>{{/if}}
           {{#if Isprofessor}}<li><a href="{{pathFor route='mylectures'}}">강의목록</a></li>{{/if}}
           <li><a href="{{pathFor route='freepost'}}">자유대화함</a></li>
+          <li><a href="{{pathFor route='myinformation'}}">내정보</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo" style="transform:translateX(0px);">
             <li><img src="/images/minilogo.png"></li>
@@ -20,7 +21,7 @@
             {{#if Isstudent}}<li><a href="{{pathFor route = 'studentlectures'}}">수강목록</a></li>{{/if}}
             {{#if Isprofessor}}<li><a href="{{pathFor route='mylectures'}}">강의목록</a></li>{{/if}}
             <li><a href="{{pathFor route='freepost'}}">자유대화함</a></li>
-            <li><a>내정보</a></li>
+            <li><a href="{{pathFor route='myinformation'}}">내정보</a></li>
             <li><a class="btn waves-effect waves-light" id="logout">로그아웃</a></li>
         </ul>
       </div>
