--- a/client/template/mobile/postItem.html
+++ b/client/template/mobile/postItem.html
@@ -1,32 +1,13 @@
 <template name = "postItem">
     <div class="row">
         <div class="col s12">
-            {{#if myPost}}<i class="small material-icons right"><p id="postdel">delete</p></i>{{/if}}<br>
+            {{#if myPost}}<i class="small material-icons right"><a href="{{pathFor route='postEdit'}}">perm_data_setting</a></i>{{/if}}<br>
             <span class="blue-text text-darken-2"><h5>{{content}}</h5></span><br>
             {{#if judgePart}}<span class="blue-text text-darken-2">{{lectitle}}</span>{{/if}}
             <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>
             <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>
             <i class="material-icons"><a href="{{pathFor route='postComment'}}">comment</a></i>{{commentsCount}}
-            {{#if myPost}}<span class="blue-text text-darken-2"><a class="modal-trigger" href="#modal1">수정</a></span>{{/if}}
             <hr class="two">
-            <div id="modal1" class="modal modal-fixed-footer">
-                <nav>
-                    <div class="nav-wrapper">
-                      <a class="brand-logo center">수정하기</a>
-                    </div>
-                </nav>
-              <div class="modal-content">
-                  <center><h5>내용을 수정해주세요.</h5></center>
-                   <div class="input-field col s12">
-                       <textarea id="textarea1" value={{content}} class="materialize-textarea" length="120"></textarea>
-                       <label for="textarea1">내용</label>
-                   </div>
-              </div>
-              <div class="modal-footer">
-                <a id="postedit" class="modal-action modal-close waves-effect waves-green btn-flat">확인</a>
-                <a id="postexit" class="modal-action modal-close waves-effect waves-green btn-flat">취소</a>
-              </div>
-            </div>
         </div>
     </div>
 </template>
