하이브리드 웹앱 시작 이미지 주작완료

--- a/client/template/mobile/commentItem.html
+++ b/client/template/mobile/commentItem.html
@@ -2,8 +2,8 @@
     <div class ="row">
         <div class ="col s10 offset-s1">
             <span class="blue-text text-darken-2"><h5>{{body}}</h5></span><br>
-            <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>&nbsp;&nbsp;&nbsp;
-            <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{author}}</span>&nbsp;&nbsp;&nbsp;
+            <img src="/images/ic_today.png"><span class="blue-text text-darken-2">{{submitted}}</span>&nbsp;&nbsp;&nbsp;
+            <img src="/images/ic_perm.png"><span class="blue-text text-darken-2">{{author}}</span>&nbsp;&nbsp;&nbsp;
             <hr class="three">
         </div>
     </div>
