--- a/client/template/mobile/login.html
+++ b/client/template/mobile/login.html
@@ -7,16 +7,24 @@
         <form class="col s12">
             <div class="row">
                 <div class="input-field col s12 m3 offset-m4">
-                  <i class="material-icons prefix">account_circle</i>
-                  <input id="icon_email" type="text" class="validate">
-                  <label for="icon_email">ID</label>
+                    <div class="col s1">
+                        <img src="/images/ic_perm.png">
+                    </div>
+                    <div class="col s11">
+                        <input id="icon_email" type="text" class="validate">
+                        <label for="icon_email">ID</label>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12 m3 offset-m4">
-                  <i class="material-icons prefix">lock_open</i>
-                  <input id="icon_password" type="password" class="validate">
-                  <label for="icon_password">Password</label>
+                    <div class="col s1">
+                        <img src="/images/ic_lock.png">
+                    </div>
+                    <div class="col s11">
+                        <input id="icon_password" type="password" class="validate">
+                        <label for="icon_password">Password</label>
+                    </div>
                 </div>
             </div>
             <div class="row">
