--- a/client/template/mobile/postItem.html
+++ b/client/template/mobile/postItem.html
@@ -1,12 +1,12 @@
 <template name = "postItem">
     <div class="row">
         <div class="col s12">
-            {{#if myPost}}<i class="small material-icons right"><a href="{{pathFor route='postEdit'}}">perm_data_setting</a></i>{{/if}}<br>
+            {{#if myPost}}<a href="{{pathFor route='postEdit'}}"><img src="/images/ic_data.png" align="right"></a>{{/if}}<br>
             <span class="blue-text text-darken-2"><h5>{{content}}</h5></span><br>
             {{#if judgePart}}<span class="blue-text text-darken-2">{{lectitle}}</span>{{/if}}
-            <i class="material-icons">today</i><span class="blue-text text-darken-2">{{submitted}}</span>
-            <i class="material-icons">perm_identity</i><span class="blue-text text-darken-2">{{postuser}}</span>
-            <i class="material-icons"><a href="{{pathFor route='postComment'}}">comment</a></i>{{commentsCount}}
+            <img src="/images/ic_today.png"><span>{{submitted}}</span>
+            <img src="/images/ic_perm.png"><span class="blue-text text-darken-2">{{postuser}}</span>
+            <a href="{{pathFor route='postComment'}}"><img src="/images/ic_comment.png"></a>{{commentsCount}}
             <hr class="two">
         </div>
     </div>
