회원정보 수정폼 만듬

--- a/client/template/mobile/freepost.html
+++ b/client/template/mobile/freepost.html
@@ -11,6 +11,6 @@
         {{/each}}
     </div>
     <div style="display:block;position:fixed;bottom:5px;right:5px;">
-        <a href="{{pathFor route='write'}}" class="btn-floating btn-large waves-effect waves-light red right"><i class="material-icons">mode_edit</i></a>
+        <a href="{{pathFor route='write'}}" class="btn-floating btn-large waves-effect waves-light red right"><img src="/images/ic_mode.png"></a>
     </div>
 </template>
