--- a/client/template/mobile/notifications.html
+++ b/client/template/mobile/notifications.html
@@ -13,6 +13,9 @@
       <li><span>알림없음</span></li>
        <hr>
     {{/if}}
+    <div class="col s12">
+        <center><a id="cancel" class="waves-effect red btn"><i class="material-icons left">exit_to_app</i>나가기</a></center>
+    </div>
   </ul>
 </template>
 
