--- a/client/template/mobile/myinformation.html
+++ b/client/template/mobile/myinformation.html
@@ -16,8 +16,15 @@
                 <li class="collection-item"><i class="material-icons left">grade</i>{{getNickname}}</li>
             </ul>
         </div>
-        <div>
-            <center><a class="waves-effect waves-light btn"><i class="material-icons left">settings</i>정보수정</a></center>
+    </div>
+    <div class="row">
+        <div class="col s12">
+            <div class="col s6">
+                <center><a id="edit" class="waves-effect waves-light btn"><i class="material-icons left">settings</i>정보수정</a></center>
+            </div>
+            <div class="col s6">
+                <center><a id="cancel" class="waves-effect red btn"><i class="material-icons left">exit_to_app</i>나가기</a></center>
+            </div>
         </div>
     </div>
 </template>
