--- a/client/template/mobile/write.html
+++ b/client/template/mobile/write.html
@@ -27,9 +27,12 @@
              </div>
         </form>
     </div>
-    <div class="row">
-        <div class="wrapper">
+    <div class="row col s12">
+        <div class="wrapper col s6">
             <button class="btn waves-effect waves-light" type="submit" id="submit">보내기</button>
+        </div>
+        <div class="wrapper col s6">
+            <button class="btn waves-effect red" type="submit" id="cancle">취소</button>
         </div>
     </div>
 </template>
